--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -28,3 +28,32 @@
     --ifm-color-primary-lightest: #4fddbf;
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.jargon-term {
+    text-decoration: underline dotted #228be6;
+}
+
+.jargon-term:hover {
+    position: relative;
+    text-decoration: none;
+    cursor: help;
+}
+
+.jargon-term .jargon-info {
+    display: none;
+}
+
+.jargon-term:hover .jargon-info {
+    display: block;
+    position: absolute;
+    top: 1.5em;
+    left: 0;
+    background: #F8F8F8;
+    border: 1px solid #DCDCDC;
+    padding: 1rem;
+    border-radius: 4px;
+    font-size: 90%;
+    min-width: 250px;
+    max-width: 450px;
+    z-index: 1;
+}
