Add React SDK links to the docs

--- a/website/src/pages/index.module.scss
+++ b/website/src/pages/index.module.scss
@@ -94,3 +94,9 @@
     align-items: center;
     justify-content: center;
 }
+
+.reactTip {
+    margin-top: 3rem;
+    font-size: .9em;
+    color: var(--ifm-color-emphasis-600);
+}
